@startuml
'https://plantuml.com/class-diagram

abstract class PC {
    # String mainboard, cpu, ram, storage, screen;
    # int Vmainboard, Vcpu, Vram, Vstorage, Vscreen;
    +{abstract} String build()
    +{abstract} int value()
}

class ConcrePC{}

abstract PCDecorator {}

class UpgradeCPU {
    # String nCPU
    # nvCPU
}

class UpgradeRam {
    # String nRam
    # int nvRam
}

PC <|-- ConcrePC
PC <|-- PCDecorator
PCDecorator <|-- UpgradeCPU
PCDecorator <|-- UpgradeRam
PCDecorator --> PC:pc

@enduml